--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -5,14 +5,51 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="src/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Coffee house</title>
 </head>
 
 <body>
-  <div id="app">
-    hello
-  </div>
-  <script type="module" src="/main.js"></script>
+  <header class="header" id="header">
+    <div class="container">
+      header
+      <nav>navigation</nav>
+    </div>
+  </header>
+
+  <section class="hero-section" id="hero">
+    <div class="hero container">
+      hero section
+    </div>
+  </section>
+
+  <section class="favorites-section" id="favorites">
+    <div class="favorites container">
+      Favourites coofee
+    </div>
+  </section>
+
+  <section class="about-section" id="about">
+    <div class="about container">
+      About
+    </div>
+  </section>
+
+  <section class="mobile-app-section" id="mobile-app">
+    <div class="mobile-app container">
+      Mobile app
+    </div>
+  </section>
+
+  <footer class="footer" id="footer">
+    <div class="container">
+      footer
+    </div>
+  </footer>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
