feat: style the hero section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -55,14 +55,17 @@
   <section class="hero-section" id="hero">
     <div class="hero container">
       <div class="hero__info">
-        <h2 class="hero__title">Enjoy premium coffee at our charming cafe</h2>
+        <h1 class="hero__title heading-1"><span class="text-accent">Enjoy</span> premium coffee at our charming cafe
+        </h1>
         <p class="hero__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a
           popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
           beverage.</p>
-        <button>Menu</button>
-      </div>
-      <div class="hero__img">
-        <img src="src/imgs/hero.jpeg" alt="coffee">
+        <a href="/menu.html" class="btn-primary">
+          <span>Menu</span>
+          <svg>
+            <use href="src/imgs/sprite.svg#coffee-cup"></use>
+          </svg>
+        </a>
       </div>
     </div>
   </section>
