feat: style the about section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -110,14 +110,17 @@
 
     <section class="about-section" id="about">
       <div class="about container">
-        <h2 class="heading-2">Resource is the perfect and cozy place where you can enjoy a variety of hot beverages,
+        <h2 class="heading-2">Resource is <span class="text-accent">the perfect and cozy place</span> where you
+          can
+          enjoy a variety of hot beverages,
           relax, catch up with
           friends, or get some work done.</h2>
+
         <div class="gallery">
-          <figure class="gallery-item gallery-item--1"><img src="src/imgs/about-1.jpeg" alt=""></figure>
-          <figure class="gallery-item gallery-item--2"><img src="src/imgs/about-2.jpeg" alt=""></figure>
-          <figure class="gallery-item gallery-item--3"><img src="src/imgs/about-3.jpeg" alt=""></figure>
-          <figure class="gallery-item gallery-item--4"><img src="src/imgs/about-4.jpeg" alt=""></figure>
+          <figure class="gallery__item gallery__item--1"><img src="src/imgs/about-1.jpeg" alt=""></figure>
+          <figure class="gallery__item gallery__item--2"><img src="src/imgs/about-3.jpeg" alt=""></figure>
+          <figure class="gallery__item gallery__item--3"><img src="src/imgs/about-2.jpeg" alt=""></figure>
+          <figure class="gallery__item gallery__item--4"><img src="src/imgs/about-4.jpeg" alt=""></figure>
         </div>
       </div>
     </section>
