feat: style footer

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -156,20 +156,62 @@
     </section>
   </main>
 
-  <footer class="footer" id="footer">
-    <div class="container">
-      <h2>Sip, Savor, Smile. It’s coffee time!</h2>
-      <div class="footer__link">
-        <a href="">twitter</a>
-        <a href="">instagram</a>
-        <a href="">facebook</a>
+  <footer id="footer">
+    <div class="footer container">
+
+      <div class="footer__offer">
+        <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
+            It’s coffee time!</h2>
+        </span>
+        <div class="footer__socials">
+          <a class="btn-icon btn-icon--light" href="">
+            <svg>
+              <use href="src/imgs/sprite.svg#twitter"></use>
+            </svg>
+          </a>
+          <a class="btn-icon btn-icon--light" href="">
+            <svg>
+              <use href="src/imgs/sprite.svg#instagram"></use>
+            </svg>
+          </a><a class="btn-icon btn-icon--light" href="">
+            <svg>
+              <use href="src/imgs/sprite.svg#facebook"></use>
+            </svg>
+          </a>
+        </div>
       </div>
-      <div class="footer__contact">
-        <h3>Contact us</h3>
-        <a href="">8558 Green Rd., LA</a>
-        <a href="tel:+16035550123">+1 (603) 555-0123</a>
-        <p>Mon-Sat: 9:00 AM – 23:00 PM</p>
-      </div>
+
+      <nav class="footer__contacts-info">
+        <h3 class="heading-3 text-light">Contact us</h3>
+
+        <ul>
+          <li>
+            <a class="footer__contact-link text-link" href="">
+              <svg>
+                <use href="src/imgs/sprite.svg#pin-alt"></use>
+              </svg>
+              <span>8558 Green Rd., LA</span>
+            </a>
+          </li>
+          <li>
+            <a class="footer__contact-link text-link" href="tel:+16035550123">
+              <svg>
+                <use href="src/imgs/sprite.svg#phone"></use>
+              </svg>
+              <span>+1 (603) 555-0123</span>
+            </a>
+          </li>
+          <li>
+            <p class="footer__contact-link text-link">
+              <svg>
+                <use href="src/imgs/sprite.svg#clock"></use>
+              </svg>
+              <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
+            </p>
+          </li>
+        </ul>
+
+      </nav>
     </div>
   </footer>
 
