--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -161,8 +161,7 @@
 
       <div class="footer__offer">
         <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
-            It’s coffee time!</h2>
-        </span>
+            It’s coffee time!</span></h2>
         <div class="footer__socials">
           <a class="btn-icon btn-icon--light" href="">
             <svg>
