--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -53,7 +53,6 @@
   </header>
 
   <main class="main">
-
     <section class="hero-section" id="hero">
       <div class="hero container">
         <div class="hero__info">
@@ -156,7 +155,7 @@
     </section>
   </main>
 
-  <footer id="footer">
+  <footer class="footer-section" id="footer">
     <div class="footer container">
 
       <div class="footer__offer">
