feat: add favicon

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="https://emojifavicon.dev/favicons/2615.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/scss/main.scss">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -184,7 +184,7 @@
 
         <ul>
           <li>
-            <a class="footer__contact-link text-link" href="">
+            <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA" target="_blank">
               <svg>
                 <use href="src/imgs/sprite.svg#pin-alt"></use>
               </svg>
