feat: set hrefs

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -162,16 +162,16 @@
         <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
             It’s coffee time!</span></h2>
         <div class="footer__socials">
-          <a class="btn-icon btn-icon--light" href="">
+          <a class="btn-icon btn-icon--light" href="https://twitter.com/">
             <svg>
               <use href="src/imgs/sprite.svg#twitter"></use>
             </svg>
           </a>
-          <a class="btn-icon btn-icon--light" href="">
+          <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
             <svg>
               <use href="src/imgs/sprite.svg#instagram"></use>
             </svg>
-          </a><a class="btn-icon btn-icon--light" href="">
+          </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
             <svg>
               <use href="src/imgs/sprite.svg#facebook"></use>
             </svg>
@@ -192,7 +192,7 @@
             </a>
           </li>
           <li>
-            <a class="footer__contact-link text-link" href="tel:+16035550123">
+            <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
               <svg>
                 <use href="src/imgs/sprite.svg#phone"></use>
               </svg>
