--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -18,7 +18,7 @@
     <nav class="nav container">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="/index.html">
+          <a href="index.html">
             <img class="logo" src="src/imgs/logo.png" alt="logo">
           </a>
         </li>
@@ -41,7 +41,7 @@
         </li>
 
         <li class="nav__item">
-          <a class="nav__link" href="/menu">
+          <a class="nav__link" href="menu.html">
             <span>Menu</span>
             <svg>
               <use href="src/imgs/sprite.svg#coffee-cup"></use>
@@ -62,7 +62,7 @@
             a
             popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
             beverage.</p>
-          <a href="/menu.html" class="btn-primary">
+          <a href="menu.html" class="btn-primary">
             <span>Menu</span>
             <svg>
               <use href="src/imgs/sprite.svg#coffee-cup"></use>
