--- a/coffee-house/public/menu.html
+++ b/coffee-house/public/menu.html
@@ -18,7 +18,7 @@
     <nav class="nav container">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="/index.html">
+          <a href="index.html">
             <img class="logo" src="src/imgs/logo.png" alt="logo">
           </a>
         </li>
@@ -26,13 +26,13 @@
         <li>
           <ul>
             <li class="nav__item">
-              <a class="nav__link" href="/index.html#favorites">Favorite coffee</a>
+              <a class="nav__link" href="index.html#favorites">Favorite coffee</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="/index.html#about">About</a>
+              <a class="nav__link" href="index.html#about">About</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="/index.html#mobile-app">Mobile app</a>
+              <a class="nav__link" href="index.html#mobile-app">Mobile app</a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="#footer">Contact us</a>
