--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="https://emojifavicon.dev/favicons/2615.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="src/scss/main.scss">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  <script type="module" src="src/main.js"></script>
   <title>Coffee house | Menu</title>
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-TAZvTNan.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-IK5Joo1E.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
       <ul class="nav__list">
         <li class="nav__item">
           <a href="index.html">
-            <img class="logo" src="src/imgs/logo.png" alt="logo">
+            <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/logo-l72Uixlr.png" alt="logo">
           </a>
         </li>
 
@@ -44,7 +44,7 @@
           <a class="nav__link nav__link--active" href="#!">
             <span>Menu</span>
             <svg>
-              <use href="src/imgs/sprite.svg#coffee-cup"></use>
+              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#coffee-cup"></use>
             </svg>
           </a>
         </li>
@@ -62,14 +62,14 @@
 
         <div class="menu__tabs">
           <button class="btn-tab btn-tab--active">
-            <img src="src/imgs/hot-beverage.svg" alt="">
+            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/hot-beverage-EFpTFgCQ.svg" alt="">
             <span>Coffee</span>
           </button>
           <button class="btn-tab">
-            <img src="src/imgs/teapot.svg" alt="">
+            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/teapot-nrPKaL-z.svg" alt="">
             <span>Tea</span>
           </button><button class="btn-tab">
-            <img src="src/imgs/dessert.svg" alt="">
+            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/dessert-xs1gs2V4.svg" alt="">
             <span>Dessert</span>
           </button>
         </div>
@@ -77,7 +77,7 @@
         <div class="menu__items">
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-1.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-1-7aHFsAq4.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Irish coffee</h3>
@@ -88,7 +88,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-2.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-2-7fa0lRbb.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Kahlua coffee</h3>
@@ -99,7 +99,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-3.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-3-GQvytrBK.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Honey raf</h3>
@@ -110,7 +110,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-4.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-4-c52uHXsS.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Ice cappuccino</h3>
@@ -121,7 +121,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-5.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-5-_21qtKFN.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Espresso</h3>
@@ -131,7 +131,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-6.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-6-29yfKNVj.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte</h3>
@@ -141,7 +141,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-7.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-7-bXQOhubq.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte macchiato</h3>
@@ -151,7 +151,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-8.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-8-gasqJPW6.jpeg" alt="">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Coffee with cognac</h3>
@@ -174,16 +174,16 @@
         <div class="footer__socials">
           <a class="btn-icon btn-icon--light" href="https://twitter.com/">
             <svg>
-              <use href="src/imgs/sprite.svg#twitter"></use>
+              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#twitter"></use>
             </svg>
           </a>
           <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
             <svg>
-              <use href="src/imgs/sprite.svg#instagram"></use>
+              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#instagram"></use>
             </svg>
           </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
             <svg>
-              <use href="src/imgs/sprite.svg#facebook"></use>
+              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#facebook"></use>
             </svg>
           </a>
         </div>
@@ -196,7 +196,7 @@
           <li>
             <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA" target="_blank">
               <svg>
-                <use href="src/imgs/sprite.svg#pin-alt"></use>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#pin-alt"></use>
               </svg>
               <span>8558 Green Rd., LA</span>
             </a>
@@ -204,7 +204,7 @@
           <li>
             <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
               <svg>
-                <use href="src/imgs/sprite.svg#phone"></use>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#phone"></use>
               </svg>
               <span>+1 (603) 555-0123</span>
             </a>
@@ -212,7 +212,7 @@
           <li>
             <p class="footer__contact-link text-link">
               <svg>
-                <use href="src/imgs/sprite.svg#clock"></use>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#clock"></use>
               </svg>
               <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
             </p>
