--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -62,14 +62,14 @@
 
         <div class="menu__tabs">
           <button class="btn-tab btn-tab--active">
-            <img src="src/imgs/hot-beverage.svg" alt="">
+            <img src="src/imgs/hot-beverage.svg" alt="coffee emoji">
             <span>Coffee</span>
           </button>
           <button class="btn-tab">
-            <img src="src/imgs/teapot.svg" alt="">
+            <img src="src/imgs/teapot.svg" alt="teapot emoji">
             <span>Tea</span>
           </button><button class="btn-tab">
-            <img src="src/imgs/dessert.svg" alt="">
+            <img src="src/imgs/dessert.svg" alt="dessert emoji">
             <span>Dessert</span>
           </button>
         </div>
@@ -77,7 +77,7 @@
         <div class="menu__items">
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-1.jpeg" alt="">
+              <img src="src/imgs/coffee-1.jpeg" alt="Irish coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Irish coffee</h3>
@@ -88,7 +88,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-2.jpeg" alt="">
+              <img src="src/imgs/coffee-2.jpeg" alt="Kahlua coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Kahlua coffee</h3>
@@ -99,7 +99,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-3.jpeg" alt="">
+              <img src="src/imgs/coffee-3.jpeg" alt="Honey raf">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Honey raf</h3>
@@ -110,7 +110,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-4.jpeg" alt="">
+              <img src="src/imgs/coffee-4.jpeg" alt="Ice cappuccino">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Ice cappuccino</h3>
@@ -121,7 +121,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-5.jpeg" alt="">
+              <img src="src/imgs/coffee-5.jpeg" alt="Espresso">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Espresso</h3>
@@ -131,7 +131,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-6.jpeg" alt="">
+              <img src="src/imgs/coffee-6.jpeg" alt="Latte">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte</h3>
@@ -141,7 +141,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-7.jpeg" alt="">
+              <img src="src/imgs/coffee-7.jpeg" alt="Latte macchiato">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte macchiato</h3>
@@ -151,7 +151,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-8.jpeg" alt="">
+              <img src="src/imgs/coffee-8.jpeg" alt="Coffee with cognac">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Coffee with cognac</h3>
