--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-TAZvTNan.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-IK5Joo1E.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-qbYbsMHp.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-1HvdGc3L.css">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
           </button>
           <div class="carousel__slide">
             <div class="item">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-slider-1-Zi0XYhzW.png" alt="frappuccino">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-slider-1-Zi0XYhzW.png" alt="S'mores Frappuccino">
               <div class="item__info">
                 <h3 class="heading-3">S'mores Frappuccino</h3>
                 <p>This new drink takes an espresso and mixes it with brown sugar
@@ -116,10 +116,14 @@
           friends, or get some work done.</h2>
 
         <div class="gallery">
-          <figure class="gallery__item gallery__item--1"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-1-vA9hzbFI.jpeg" alt=""></figure>
-          <figure class="gallery__item gallery__item--2"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-3-BzfBZTyP.jpeg" alt=""></figure>
-          <figure class="gallery__item gallery__item--3"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-2-JNKRGuSC.jpeg" alt=""></figure>
-          <figure class="gallery__item gallery__item--4"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-4-jknXV_ZK.jpeg" alt=""></figure>
+          <figure class="gallery__item gallery__item--1"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-1-vA9hzbFI.jpeg"
+              alt="a woman drinking coffee in a cafe"></figure>
+          <figure class="gallery__item gallery__item--2"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-2-BzfBZTyP.jpeg"
+              alt="a man working on a laptop with coffee"></figure>
+          <figure class="gallery__item gallery__item--3"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-3-JNKRGuSC.jpeg" alt="a cup of coffee">
+          </figure>
+          <figure class="gallery__item gallery__item--4"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-4-jknXV_ZK.jpeg"
+              alt="a couple drinking coffee"></figure>
         </div>
       </div>
     </section>
@@ -149,7 +153,7 @@
           </div>
         </div>
         <div class="mobile-app__img-box">
-          <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/mobile-screens-1YNBfEWe.png" alt="" class="mobile-app__img">
+          <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/mobile-screens-1YNBfEWe.png" alt="mobile app" class="mobile-app__img">
         </div>
       </div>
     </section>
