--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house | Menu</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-TAZvTNan.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-IK5Joo1E.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-qbYbsMHp.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-1HvdGc3L.css">
 </head>
 
 <body>
@@ -62,14 +62,14 @@
 
         <div class="menu__tabs">
           <button class="btn-tab btn-tab--active">
-            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/hot-beverage-EFpTFgCQ.svg" alt="">
+            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/hot-beverage-EFpTFgCQ.svg" alt="coffee emoji">
             <span>Coffee</span>
           </button>
           <button class="btn-tab">
-            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/teapot-nrPKaL-z.svg" alt="">
+            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/teapot-nrPKaL-z.svg" alt="teapot emoji">
             <span>Tea</span>
           </button><button class="btn-tab">
-            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/dessert-xs1gs2V4.svg" alt="">
+            <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/dessert-xs1gs2V4.svg" alt="dessert emoji">
             <span>Dessert</span>
           </button>
         </div>
@@ -77,7 +77,7 @@
         <div class="menu__items">
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-1-7aHFsAq4.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-1-7aHFsAq4.jpeg" alt="Irish coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Irish coffee</h3>
@@ -88,7 +88,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-2-7fa0lRbb.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-2-7fa0lRbb.jpeg" alt="Kahlua coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Kahlua coffee</h3>
@@ -99,7 +99,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-3-GQvytrBK.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-3-GQvytrBK.jpeg" alt="Honey raf">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Honey raf</h3>
@@ -110,7 +110,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-4-c52uHXsS.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-4-c52uHXsS.jpeg" alt="Ice cappuccino">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Ice cappuccino</h3>
@@ -121,7 +121,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-5-_21qtKFN.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-5-_21qtKFN.jpeg" alt="Espresso">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Espresso</h3>
@@ -131,7 +131,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-6-29yfKNVj.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-6-29yfKNVj.jpeg" alt="Latte">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte</h3>
@@ -141,7 +141,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-7-bXQOhubq.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-7-bXQOhubq.jpeg" alt="Latte macchiato">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte macchiato</h3>
@@ -151,7 +151,7 @@
           </article>
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-8-gasqJPW6.jpeg" alt="">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-8-gasqJPW6.jpeg" alt="Coffee with cognac">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Coffee with cognac</h3>
