refactor: disable active and empty links

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -136,14 +136,14 @@
             you
             are</p>
           <div class="mobile-app__links">
-            <a class="btn-appstore" href="#">
+            <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
                 <use href="src/imgs/sprite.svg#apple"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on the</span>
               <span class="btn-appstore__title">App store</span>
             </a>
-            <a class="btn-appstore" href="#">
+            <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
                 <use href="src/imgs/sprite.svg#google"></use>
               </svg>
