refactor: minor changes

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-BnVYbWhA.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-sZ6hwsyY.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-q5Qz-gaE.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-gAbC3Fkc.css">
 </head>
 
 <body>
@@ -136,14 +136,14 @@
             you
             are</p>
           <div class="mobile-app__links">
-            <a class="btn-appstore" href="#">
+            <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
                 <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#apple"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on the</span>
               <span class="btn-appstore__title">App store</span>
             </a>
-            <a class="btn-appstore" href="#">
+            <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
                 <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#google"></use>
               </svg>
