fix: remove interactivity styles from schedule element

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -210,7 +210,7 @@
             </a>
           </li>
           <li>
-            <p class="footer__contact-link text-link">
+            <p class="footer__contact-link text-link footer__contact-link--schedule">
               <svg>
                 <use href="src/imgs/sprite.svg#clock"></use>
               </svg>
