--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-q5Qz-gaE.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-gAbC3Fkc.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-1QuoXucD.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-v7CRsCtR.css">
 </head>
 
 <body>
@@ -204,7 +204,7 @@
             </a>
           </li>
           <li>
-            <p class="footer__contact-link text-link">
+            <p class="footer__contact-link text-link footer__contact-link--schedule">
               <svg>
                 <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#clock"></use>
               </svg>
