fix: hero and footer width

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -166,60 +166,62 @@
   </main>
 
   <footer class="footer-section" id="footer">
-    <div class="footer container">
-
-      <div class="footer__offer">
-        <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
-            It’s coffee time!</span></h2>
-        <div class="footer__socials">
-          <a class="btn-icon btn-icon--light" href="https://twitter.com/">
-            <svg>
-              <use href="src/imgs/sprite.svg#twitter"></use>
-            </svg>
-          </a>
-          <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
-            <svg>
-              <use href="src/imgs/sprite.svg#instagram"></use>
-            </svg>
-          </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
-            <svg>
-              <use href="src/imgs/sprite.svg#facebook"></use>
-            </svg>
-          </a>
+    <div class="container">
+      <div class="footer">
+        <div class="footer__offer">
+          <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
+              It’s coffee time!</span></h2>
+          <div class="footer__socials">
+            <a class="btn-icon btn-icon--light" href="https://twitter.com/">
+              <svg>
+                <use href="src/imgs/sprite.svg#twitter"></use>
+              </svg>
+            </a>
+            <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
+              <svg>
+                <use href="src/imgs/sprite.svg#instagram"></use>
+              </svg>
+            </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
+              <svg>
+                <use href="src/imgs/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
         </div>
+
+        <nav class="footer__contacts-info">
+          <h3 class="heading-3 text-light">Contact us</h3>
+
+          <ul>
+            <li>
+              <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA"
+                target="_blank">
+                <svg>
+                  <use href="src/imgs/sprite.svg#pin-alt"></use>
+                </svg>
+                <span>8558 Green Rd., LA</span>
+              </a>
+            </li>
+            <li>
+              <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
+                <svg>
+                  <use href="src/imgs/sprite.svg#phone"></use>
+                </svg>
+                <span>+1 (603) 555-0123</span>
+              </a>
+            </li>
+            <li>
+              <p class="footer__contact-link text-link footer__contact-link--schedule">
+                <svg>
+                  <use href="src/imgs/sprite.svg#clock"></use>
+                </svg>
+                <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
+              </p>
+            </li>
+          </ul>
+
+        </nav>
       </div>
-
-      <nav class="footer__contacts-info">
-        <h3 class="heading-3 text-light">Contact us</h3>
-
-        <ul>
-          <li>
-            <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA" target="_blank">
-              <svg>
-                <use href="src/imgs/sprite.svg#pin-alt"></use>
-              </svg>
-              <span>8558 Green Rd., LA</span>
-            </a>
-          </li>
-          <li>
-            <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
-              <svg>
-                <use href="src/imgs/sprite.svg#phone"></use>
-              </svg>
-              <span>+1 (603) 555-0123</span>
-            </a>
-          </li>
-          <li>
-            <p class="footer__contact-link text-link footer__contact-link--schedule">
-              <svg>
-                <use href="src/imgs/sprite.svg#clock"></use>
-              </svg>
-              <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
-            </p>
-          </li>
-        </ul>
-
-      </nav>
     </div>
   </footer>
 
