--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -15,41 +15,46 @@
 
 <body>
   <header class="header" id="header">
-    <nav class="nav container">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a href="index.html">
-            <img class="logo" src="src/imgs/logo.png" alt="logo">
-          </a>
-        </li>
+    <div class="container">
 
-        <li>
-          <ul>
-            <li class="nav__item">
-              <a class="nav__link" href="index.html#favorites">Favorite coffee</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="index.html#about">About</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="index.html#mobile-app">Mobile app</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#footer">Contact us</a>
-            </li>
-          </ul>
-        </li>
+      <a href="index.html">
+        <img class="logo" src="src/imgs/logo.png" alt="logo">
+      </a>
 
-        <li class="nav__item">
-          <a class="nav__link nav__link--active" href="#!">
-            <span>Menu</span>
-            <svg>
-              <use href="src/imgs/sprite.svg#coffee-cup"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+
+          </li>
+
+          <li>
+            <ul>
+              <li class="nav__item">
+                <a class="nav__link" href="#favorites">Favorite coffee</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#about">About</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#mobile-app">Mobile app</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#footer">Contact us</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="nav__item">
+            <a class="nav__link nav__link--active" href="menu.html">
+              <span>Menu</span>
+              <svg>
+                <use href="src/imgs/sprite.svg#coffee-cup"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
