--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -141,7 +141,7 @@
       <div class="mobile-app container">
         <div class="mobile-app__info">
           <h2 class="heading-2"><span class="text-accent">Download</span> our apps to start ordering</h2>
-          <p>Download the Resource app today and experience the comfort of ordering your favorite coffee frhom wherever
+          <p>Download the Resource app today and experience the comfort of ordering your favorite coffee from wherever
             you
             are</p>
           <div class="mobile-app__links">
@@ -157,7 +157,7 @@
                 <use href="src/imgs/sprite.svg#google"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on</span>
-              <span class="btn-appstore__title">Google play</span>
+              <span class="btn-appstore__title">Google Play</span>
             </a>
           </div>
         </div>
