feat: make the menu section responsive

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -135,6 +135,7 @@
               <p class="card__price heading-3">$4.50</p>
             </div>
           </article>
+
           <article class="card">
             <div class="card__img-box">
               <img src="src/imgs/coffee-6.jpeg" alt="Latte">
@@ -145,6 +146,7 @@
               <p class="card__price heading-3">$5.50</p>
             </div>
           </article>
+
           <article class="card">
             <div class="card__img-box">
               <img src="src/imgs/coffee-7.jpeg" alt="Latte macchiato">
@@ -155,6 +157,7 @@
               <p class="card__price heading-3">$5.50</p>
             </div>
           </article>
+
           <article class="card">
             <div class="card__img-box">
               <img src="src/imgs/coffee-8.jpeg" alt="Coffee with cognac">
@@ -166,6 +169,12 @@
             </div>
           </article>
         </div>
+
+        <button class="btn-icon">
+          <svg>
+            <use href=" src/imgs/sprite.svg#refresh"></use>
+          </svg>
+        </button>
       </div>
     </section>
 
