fix: minor fixes

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -172,7 +172,7 @@
 
         <button class="btn-icon">
           <svg>
-            <use href=" src/imgs/sprite.svg#refresh"></use>
+            <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-Rj9p57E6.svg#refresh"></use>
           </svg>
         </button>
       </div>
